--- a/PhotoUploadTool/Storyboard_iphone.storyboard
+++ b/PhotoUploadTool/Storyboard_iphone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C3103" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="qsd-pf-VRE">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C3103" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="mYa-E2-0Yg">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -920,6 +920,106 @@
             </objects>
             <point key="canvasLocation" x="824" y="128"/>
         </scene>
+        <!--Friends View Controller-->
+        <scene sceneID="OIF-df-GQR">
+            <objects>
+                <viewController id="mYa-E2-0Yg" customClass="FriendsViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ZlO-2D-S0u">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" id="tzC-6H-IUw" userLabel="contentView">
+                                <rect key="frame" x="0.0" y="44" width="320" height="373"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view contentMode="scaleToFill" id="rmB-Lm-hDW" userLabel="titleView">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="tailTruncation" id="D4G-Qy-Euc">
+                                        <rect key="frame" x="225" y="5" width="89" height="37"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="6" maxX="7" maxY="0.0"/>
+                                        <state key="normal" title="北京" backgroundImage="tabbarbg.png">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="highlighted">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="topRightClicked:" destination="mYa-E2-0Yg" eventType="touchUpInside" id="P7H-zw-1Dd"/>
+                                        </connections>
+                                    </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="arrowBottom.png" id="M5s-Fl-7hi" userLabel="arrow">
+                                        <rect key="frame" x="265" y="34" width="7" height="5"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="titleLogo.png" id="13i-o0-uQ9">
+                                        <rect key="frame" x="139" y="5" width="42" height="37"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.180392161" green="0.50196081400000003" blue="0.81568634510000004" alpha="1" colorSpace="deviceRGB"/>
+                            </view>
+                            <view alpha="0.60000000000000009" contentMode="scaleToFill" id="z3T-XJ-pxt" userLabel="bottomView">
+                                <rect key="frame" x="0.0" y="416" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <subviews>
+                                    <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" id="wAn-0u-rYH" userLabel="leftBt">
+                                        <rect key="frame" x="0.0" y="0.0" width="160" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES"/>
+                                        <accessibility key="accessibilityConfiguration">
+                                            <accessibilityTraits key="traits" none="YES" button="YES" notEnabled="YES"/>
+                                        </accessibility>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                        <state key="normal" title="同城" backgroundImage="tabbarbg.png">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="highlighted">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="bottomLeftClicked:" destination="mYa-E2-0Yg" eventType="touchUpInside" id="mtD-KN-9yJ"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="4vu-1U-fn8" userLabel="rightBt">
+                                        <rect key="frame" x="160" y="0.0" width="160" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <state key="normal" title="我的照片">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="highlighted">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="bottomRightClicked:" destination="mYa-E2-0Yg" eventType="touchUpInside" id="9JW-Eb-Ebo"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.180392161" green="0.50196081400000003" blue="0.81568634510000004" alpha="1" colorSpace="deviceRGB"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="bottomLeftBt" destination="wAn-0u-rYH" id="8JO-u1-Jhq"/>
+                        <outlet property="bottomRightBt" destination="4vu-1U-fn8" id="DUD-Um-spN"/>
+                        <outlet property="contentView" destination="tzC-6H-IUw" id="zM7-Yp-bLg"/>
+                        <outlet property="topRightBt" destination="D4G-Qy-Euc" id="9Ex-fF-sK4"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="H1m-RF-n6R" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="647" y="-576"/>
+        </scene>
         <!--modifyEmailController-->
         <scene sceneID="2o5-bH-KPd">
             <objects>
@@ -1751,6 +1851,7 @@
     </scenes>
     <resources>
         <image name="arrow.png" width="19" height="25"/>
+        <image name="arrowBottom.png" width="14" height="10"/>
         <image name="back.png" width="48" height="48"/>
         <image name="btn.png" width="543" height="89"/>
         <image name="ic_lock.png" width="30" height="30"/>
@@ -1766,6 +1867,8 @@
         <image name="privatePwd_ok.png" width="414" height="88"/>
         <image name="privatePwd_textbg.png" width="411" height="85"/>
         <image name="setting.png" width="48" height="48"/>
+        <image name="tabbarbg.png" width="640" height="87"/>
+        <image name="titleLogo.png" width="95" height="75"/>
     </resources>
     <classes>
         <class className="DRTabBarController" superclassName="UIViewController">
@@ -1813,6 +1916,18 @@
                 <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
                 <relationship kind="outlet" name="tabbarTitleLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="tabbarView" candidateClass="UIView"/>
+            </relationships>
+        </class>
+        <class className="FriendsViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/FriendsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="bottomLeftClicked:" candidateClass="UIButton"/>
+                <relationship kind="action" name="bottomRightClicked:" candidateClass="UIButton"/>
+                <relationship kind="action" name="topRightClicked:" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="bottomLeftBt" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="bottomRightBt" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="contentView" candidateClass="UIView"/>
+                <relationship kind="outlet" name="topRightBt" candidateClass="UIButton"/>
             </relationships>
         </class>
         <class className="GridViewController" superclassName="UIViewController">
